welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:1: error: Missing closing brace `}' assumed here
override def run() {
^PictureMono2:1: error: expected start of definition
override def run() {
         ^PictureMono2:6: error: expected class or object definition
def marqueSol(){
^PictureMono2:11: error: expected class or object definition
def faireV() {
^PictureMono2:28: error: expected class or object definition
def faireMotif() {
^